# lpfp

./: .gitignore  CHANGELOG.md  Makefile  README.md  lpfp.cabal
.github/workflows/: haskell.yml
src/: LPFP.hs
src/Ch02/: First.hs  Funcs.hs  ThrowRock.hs
src/Ch03/: BagFee.hs  Char.hs  FuncType.hs  GreaterThan.hs  Precedence.hs  String.hs  TypeSig.hs  XOrY.hs
src/Ch04/: Kinematics.hs
src/Ch05/: Factorial.hs  GeometricSeries.hs  Last.hs  Palindrome.hs  Types.hs
src/Ch06/: Filter.hs  IntStrBool.hs  Integration.hs  Map.hs  Predicate.hs  Replicate.hs  Spring.hs  TrapezoidalRule.hs  Types.hs
src/Ch07/: PlotYRock20.hs  PlotYRock30.hs  QuickPlotting.hs  SinPlot.hs
src/Ch08/: Quotients.hs  TypeClasses.hs  TypeTest.hs  TypeTrouble.hs
src/Ch09/: Factorial.hs  Fibonacci.hs  FindFirst.hs  Grades.hs  Integration.hs  MaybeToList.hs  Pairs.hs  Pick13.hs  PolarToCart.hs  Pythag.hs  RockTrajectory.hs  SafeHead.hs  TVPairs.hs  ToTriple.hs  TripleFunc.hs  Triples.hs  Zip.hs
src/Ch10/: BallSpeed.hs  Grade.hs  Kinematics3D.hs  MagAngles.hs  Mass.hs  MaxHeight.hs  MyBool.hs  MyMaybe.hs  NonuniformCircularMotion.hs  ProjectileVel.hs  SimpleVec.hs  Speed.hs  UniformCircularMotion.hs  Vec2D.hs  VecIntegral.hs  XYProj.hs
src/Ch11/: ProjectileMotion.hs  QuadraticPlot.hs
src/ch02/: First.hs  Func.hs  Funcs.hs  SinDeg.hs  ThrowRock.hs  first.hs  func.hs  funcs.hs  throw_rock.hs
src/ch03/: AmazingCurve.hs  BagFee.hs  Char.hs  FuncType.hs  GreaterThan.hs  Heaviside.hs  Precedence.hs  SplitFunc.hs  String.hs  TypeSig.hs  XOrY.hs  amazing_curve.hs  bag_fee.hs  char.hs  functype.hs  greater_than.hs  heaviside.hs  precedence.hs  split_func.hs  string.hs  type_sig.hs  xory.hs
src/ch04/: Kinematics.hs  avg_velocity.hs  exercises.tex  kinematics.hs
src/ch05/: Cycle.hs  Exponential.hs  Factorial.hs  GeometricSeries.hs  Last.hs  Lists.hs  Null.hs  Numbers.hs  Palindrome.hs  Range.hs  SndItem.hs  Types.hs  cycle.hs  exercises.tex  exponential.hs  factorial.hs  geometricseries.hs  last.hs  null.hs  numbers.hs  palindrome.hs  range.hs  snditem.hs
src/ch06/: Average.hs  Filter.hs  Geq.hs  IntStrBool.hs  Integration.hs  Map.hs  Predicate.hs  Repeat.hs  Replicate.hs  RockTrajectory.hs  Spring.hs  Squares.hs  TrapezoidalRule.hs  Types.hs  geq.hs  integration.hs  intstrbool.hs  map.hs  predicate.hs  repeat.hs  replicate.hs  rocktrajectory.hs  spring.hs  squares.hs  types.hs
test/: Ch02Test.hs  Ch05Test.hs  Ch06Test.hs  Ch09Test.hs  Ch10Test.hs  TestMain.hs
tex/: lpfp.tex
tex/ch04/: exercises.tex
tex/ch04/exercises/: 4_2.tex  4_3.tex  4_4.tex
tex/ch05/: exercises.tex
tex/ch05/exercises/: 5_10.tex  5_11.tex  5_12.tex  5_13.tex  5_14.tex  5_15.tex  5_4.tex  5_5.tex  5_6.tex  5_7.tex  5_8.tex  5_9.tex
tex/ch06/: exercises.tex
tex/ch06/exercises/: 6_1.tex  6_10.tex  6_11.tex  6_12.tex  6_13.tex  6_14.tex  6_15.tex  6_16.tex  6_2.tex  6_3.tex  6_4.tex  6_5.tex  6_6.tex  6_7.tex  6_8.tex  6_9.tex
tex/ch07/: exercises.tex
tex/ch07/exercises/: 7_1.tex  7_2.tex  7_3.tex
tex/ch08/: exercises.tex
tex/ch08/exercises/: 8_1.tex  8_2.tex  8_3.tex  8_4.tex  8_5.tex  8_6.tex  8_7.tex  8_8.tex  8_9.tex
tex/ch09/: exercises.tex
tex/ch09/exercises/: 9_1.tex  9_10.tex  9_11.tex  9_12.tex  9_13.tex  9_14.tex  9_15.tex  9_2.tex  9_3.tex  9_4.tex  9_5.tex  9_6.tex  9_7.tex  9_8.tex  9_9.tex
tex/ch10/: exercises.tex
tex/ch10/exercises/: 10_1.tex  10_11.tex  10_2.tex  10_3.tex  10_4.tex  10_5.tex  10_6.tex  10_7.tex  10_8.tex  10_9.tex
tex/ch11/: exercises.tex
tex/ch11/exercises/: 11_1.tex
