cabal-version: 3.0
name: lpfp
version: 0.1.0.0
-- synopsis:
-- description:
license: BSD-3-Clause
license-file: LICENSE
author: Graham Strickland
maintainer: grahamhstrickland@gmail.com
-- copyright:
build-type: Simple
extra-doc-files: CHANGELOG.md

-- extra-source-files:
common warnings
  ghc-options: -Wall

library
  import: warnings
  exposed-modules:
    Ch02.First
    Ch02.Func
    Ch02.Funcs
    Ch02.SinDeg
    Ch02.ThrowRock
    Ch03.AmazingCurve
    Ch03.BagFee
    Ch03.Char
    Ch03.FuncType
    Ch03.GreaterThan
    Ch03.Heaviside
    Ch03.Precedence
    Ch03.SplitFunc
    Ch03.String
    Ch03.TypeSig
    Ch03.XOrY
    Ch04.Kinematics
    Ch05.Cycle
    Ch05.Exponential
    Ch05.Factorial
    Ch05.GeometricSeries
    Ch05.Last
    Ch05.Lists
    Ch05.Null
    Ch05.Numbers
    Ch05.Palindrome
    Ch05.Range
    Ch05.SndItem
    Ch05.Types
    Ch06.Average
    Ch06.Filter
    Ch06.Geq
    Ch06.IntStrBool
    Ch06.Integration
    Ch06.Map
    Ch06.Predicate
    Ch06.Repeat
    Ch06.Replicate
    Ch06.RockTrajectory
    Ch06.Spring
    Ch06.Squares
    Ch06.TrapezoidalRule
    Ch06.Types
    Ch07.PlotYRock20
    Ch07.PlotYRock30
    Ch07.QuickPlotting
    Ch07.SinPlot
    Ch08.Quotients
    Ch08.TypeClasses
    Ch08.TypeTest
    Ch08.TypeTrouble
    Ch09.Factorial
    Ch09.Fibonacci
    Ch09.FindFirst
    Ch09.Grades
    Ch09.Integration
    Ch09.MaybeToList
    Ch09.Pairs
    Ch09.Pick13
    Ch09.PolarToCart
    Ch09.Pythag
    Ch09.RockTrajectory
    Ch09.SafeHead
    Ch09.TVPairs
    Ch09.ToTriple
    Ch09.TripleFunc
    Ch09.Triples
    Ch09.Zip
    Ch10.Grade
    Ch10.Kinematics3D
    Ch10.Mass
    Ch10.MaxHeight
    Ch10.MyBool
    Ch10.MyMaybe
    Ch10.VecIntegral
    LPFP

  other-modules: Ch10.SimpleVec
  -- other-extensions:
  build-depends:
    Cabal,
    base,
    gnuplot,

  hs-source-dirs: src
  default-language: Haskell2010
